imageGallery.css: Add enough passing to avoid slide buttons covering text

--- a/resources/css/imageGallery.css
+++ b/resources/css/imageGallery.css
@@ -73,7 +73,7 @@
     display: none;
     text-align: center;
     background-color: #222;
-    padding: 2px 16px;
+    padding: 2px 43px;
     color: white;
 }
 
